[package]
name = "stm32f407g_disc1"
version = "0.1.0"
authors = ["murai"]
edition = "2018"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-semihosting = "0.5.1"

[dependencies.stm32f4xx-hal]
version = "0.3.0"
features = ["stm32f407"]

# this lets you use `cargo fix`!
[[bin]]
name = "stm32f407g_disc1"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
